fix z-index

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -15,7 +15,7 @@
   box-shadow: 0px 10px 20px $dark-05;
   //change this later
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   // display: none;
   &.active {
     display: block;
